--- a/ashique prabhu/templates/index.html
+++ b/ashique prabhu/templates/index.html
@@ -711,14 +711,14 @@
                 <a href="https://in.linkedin.com/in/ashique-prabhu-a-k-2a4a0a156" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
             <div class="copyright">
-                &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
+                &copy; Copyright <strong><span>ASHIQUE PRABHU AK</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
                 <!-- All the links in the footer should remain intact. -->
                 <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: [license-url] -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                Designed by <strong>ASHIQUE PRABHU AK</strong>
             </div>
         </div>
     </footer>
